--- a/DotnetClient/appsettings.json
+++ b/DotnetClient/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=db;Username=postgres;Password=secret"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
