feature: authentication with roles

--- a/DotnetClient/appsettings.json
+++ b/DotnetClient/appsettings.json
@@ -1,6 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=db;Username=postgres;Password=secret"
+    "DefaultConnection": "Host=localhost;Database=nippon_ce;Username=postgres;Password=12345"
+  },
+  "JWT": {
+    "Issuer": "NipponCE",
+    "ExpiryMinutes": 3600,
+    "Secret": "your-very-long-secret-key-for-jwt-token-generation",
+    "Audience": "NipponCE"
   },
   "Logging": {
     "LogLevel": {
