--- a/DotnetClient/appsettings.Development.json
+++ b/DotnetClient/appsettings.Development.json
@@ -1,11 +1,18 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=db;Username=postgres;Password=secret"
+    "DefaultConnection": "Host=localhost;Database=nippon_ce;Username=postgres;Password=12345"
+  },
+  "JWT": {
+    "Issuer": "NipponCE",
+    "ExpiryMinutes": 3600,
+    "Secret": "your-very-long-secret-key-for-jwt-token-generation",
+    "Audience": "NipponCE"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
